# api/routes/plants.js
@@ -1,15 +1,27 @@
 const { Router } = require('express');
+const jwt = require('jsonwebtoken');
 
 const db = require('../db');
 
 const router = Router();
-router.post('/api/v1/plants', (req, res) => {
-    console.log(req.body);
-    res.send('ok');
-});
+
+const validateRequests = (requiredRoles) => {
+    return (req, res, next) => {
+        const accessToken = jwt.decode(req.cookies.accessToken);
+        if(requiredRoles.includes(accessToken.role)){
+            next();
+        }
+        else{
+            res.status(401).json({
+                code: 401,
+                message: "Unauthorized"
+            });
+        }
+    }
+}
 
 //get di tutte le piante
-router.get('/api/v1/plants', async (req, res) => {
+router.get('/api/v1/plants', validateRequests(['user', 'admin']), async (req, res) => {
     db.all('SELECT * FROM garden_plant', (err, rows) => {
         if (err) {
             res.status(500).json({
@@ -24,7 +36,7 @@ router.get('/api/v1/plants', async (req, res) => {
 });
 
 //get di una singola pianta
-router.get('/api/v1/plants/:id', (req, res) => {
+router.get('/api/v1/plants/:id', validateRequests(['user', 'admin']), (req, res) => {
     const id = req.params.id;
     db.get('SELECT * FROM garden_plant WHERE plant_id = ?', [id], (err, row) => {
         if (err) {
@@ -46,7 +58,7 @@ router.get('/api/v1/plants/:id', (req, res) => {
 });
 
 //ricerca di tutte le piante che contengono la stringa passata
-router.get('/api/v1/plants/research/:name', (req, res) => {
+router.get('/api/v1/plants/research/:name', validateRequests(['user', 'admin']), (req, res) => {
     const name = req.params.name;
     db.all('SELECT * FROM garden_plant WHERE name LIKE ?', ['%' + name + '%'], (err, rows) => {
         if (err) {
@@ -61,11 +73,16 @@ router.get('/api/v1/plants/research/:name', (req, res) => {
     });
 })
 
-router.put('/api/v1/plants/:id', (req, res) => {
+router.post('/api/v1/plants', validateRequests(['admin']), (req, res) => {
+    console.log(req.body);
+    res.send('ok');
+});
+
+router.put('/api/v1/plants/:id', validateRequests(['admin']), (req, res) => {
     const id = req.params.id;
     const plant = req.body;
 
-    db.run('UPDATE garden_plant SET name = ?, description = ?, image = ? WHERE plant_id = ?', [plant.name, plant.description, plant.image, id], (err) => {
+    db.run('UPDATE garden_plant SET name = ?, description = ? WHERE plant_id = ?', [plant.name, plant.description, id], (err) => {
         if (err) {
             return res.status(500).json({
                 code: 500,
@@ -86,7 +103,7 @@ router.put('/api/v1/plants/:id', (req, res) => {
     });
 });
 
-router.delete('/api/v1/plants/:id', (req, res) => {
+router.delete('/api/v1/plants/:id', validateRequests(['admin']), (req, res) => {
     const id = req.params.id;
     db.run('DELETE FROM garden_plant WHERE plant_id = ?', [id], (err) => {
         if (err) {
